# squid-pet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: INSTALL.md  PRIVACY.md  STARTUP_SAFETY.md
launchagent/: com.pink.indigo-pet.plist  com.pink.squid-pet.plist.template  install.sh
openspec/: config.yaml
openspec/changes/approval-needed-direct-signal/: design.md  proposal.md  tasks.md
openspec/changes/distribution-installer/: design.md  tasks.md
openspec/changes/foundational-spec/: design.md  proposal.md  tasks.md
openspec/specs/pet-window/: spec.md
scripts/: check_cocoa_main_thread.py
src/indigo_pet/: __main__.py  config.py  menu.py  observer.py  passthrough.py  pulse.py  routine.py  wanderer.py  watcher.py  window.py
src/squid_pet/: __main__.py  config.py  detectors.py  doctor.py  llm_client.py  menu.py  observer.py  passthrough.py  routine.py  threading_guards.py  wanderer.py  watcher.py  window.py
tests/: test_awaiting_input_signal.py  test_celebrate_hold.py  test_cocoa_main_thread_hook.py  test_detectors_code_puppy.py  test_detectors_git.py  test_detectors_ide.py  test_detectors_terminal.py  test_doctor.py  test_fallback_hardening.py  test_install_update_skip.py  test_llm_bubbles.py  test_llm_polish.py  test_observer.py  test_per_proc_approval.py  test_settings_hot_reload.py  test_settings_triggers.py  test_state_machine.py  test_stroll_mode.py  test_threading_guards.py  test_why_cli.py  test_window_constants_agree.py
tools/: align_to_reference.py  recolor_attention.py  remove_bg.py
(+67 files in other folders)
