[project]
name = "indigo-pet"
version = "0.1.0"
description = "A desktop companion pet that watches Code Puppy + VS Code and reacts to activity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5.0",
    "psutil>=6.0",
    "pillow",
]

[project.scripts]
indigo-pet = "indigo_pet.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indigo_pet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[[tool.uv.index]]
name = "walmart-pypi"
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/external-pypi/simple/"
default = true
